--- a/doc/alk.tex
+++ b/doc/alk.tex
@@ -488,7 +488,7 @@ and so on.
 
 \subsection{Sets}
 
-A set value is written as $\{ v_0,\ldots,v_{n-1}\}$, where $v_i$ is a value, for $i=0,\ldots,n-1$. The operations over sets include the union \verb|U|, the intersection \verb|^|, the difference \verb|\|, and the membership test \verb|_ belongsTo _|.
+A set value is written as $\{ v_0,\ldots,v_{n-1}\}$, where $v_i$ is a value, for $i=0,\ldots,n-1$. The operations over sets include the union \verb|U|, the intersection \verb|^|, the difference \verb|\|, and the membership test \verb|_ in _|.
 Example:
 \begin{center}
 \begin{tabular}{ll}
