--- a/todo/todo.txt
+++ b/todo/todo.txt
@@ -1,4 +1,19 @@
-- Specs (expresii boolene ca argument) : s = {x in A | x%2==0};
+- Algoritm probabilist -> afisarea probabilitatii
+- Visitor de analiza (daca este algoritm probabilist ...)
+- De printat cu paranteze complete erorile la expresii (reference is invalid): de rafinat mesajul nume variabila + expresie
+- De pus constants la optiuni
+- Analiza complexitatii
+
 - Scripturile
-- Choose exhaustiv
+- Functii builtin: max, min, is Array, isalpha
+- Pluginuri editoare
+- Algoritm exhaustiv
 - ++ -- de reglat
+
+
+
+- De printat cu paranteze complete erorile la expresii (reference is invalid): de rafinat mesajul nume variabila + expresie
+- Scripturile + optiunile
+- Algoritm probabilist -> afisarea probabilitatii
+- Include librarii
+- De schimbat specificatii -> 3 versiuni, 1 deprecated
