--- a/todo/todo.txt
+++ b/todo/todo.txt
@@ -12,3 +12,14 @@
 - De printat cu paranteze complete erorile la expresii (reference is invalid): de rafinat mesajul nume variabila + expresie
 - De pus la stringuri mai multe metode, dintre care split, size, at DONE
 - repeat until
+
+***
+- operatie de lookup la liste
+- maps
+- metode pentru structurii proprii (de ex. grafuri, ast-uri)
+    x.f(...) equivalent cu x = f(out x,...)  sau f(x, ...)  (diferenta
+    este data de prezenta lui "out" la declarare si neprezenta lui
+    return in al doilea caz)
+
+
+    
