--- a/doc/alk.tex
+++ b/doc/alk.tex
@@ -555,10 +555,10 @@ Algorithm & Output\\
 \begin{verbatim}
 p = 3;
 q = 9;
-a = [ i | i in p .. q ];
+a = [ i | i from [p .. q] ];
 p = 2;
-b = [ a[i] | i in p .. p+3 ];
-l = < b[i] * 2 | i in p-2 .. p >;
+b = [ a[i] | i from [p .. p+3] ];
+l = < b[i] * 2 | i from [p-2 .. p] >;
 print(a);
 print(b);
 print(l);
@@ -567,7 +567,7 @@ print(l);
 &
 \begin{minipage}{.45\textwidth}
 \begin{verbatim}
-> alki -a specs.alk 
+> alki -a specs.alk
 [3, 4, 5, 6, 7, 8, 9]
 [5, 6, 7, 8]
 <10, 12, 14>
@@ -722,7 +722,7 @@ print(A);
 &
 \begin{minipage}{.45\textwidth}
 \begin{verbatim}
-> alki -a it1.alk 
+> alki -a it1.alk
 [2, 5, 8]
 \end{verbatim}
 \end{minipage}
@@ -753,7 +753,7 @@ print(c);
 &
 \begin{minipage}{.45\textwidth}
 \begin{verbatim}
-> alki -a it3.alk 
+> alki -a it3.alk
 33
 2
 33
@@ -766,11 +766,11 @@ print(c);
 
 Alk includes the basic operators over scalars with a C++-like syntax.
 
-Since Alk is designed with K Framework, it can be easily extended with new operators. 
+Since Alk is designed with K Framework, it can be easily extended with new operators.
 
 \section{Statements}
 
-The syntax for the statements is similar to that of imperative C++. 
+The syntax for the statements is similar to that of imperative C++.
 
 We already have seen examples of the assignment statement.
 The other statements include:
@@ -782,12 +782,12 @@ Syntax: \verb'{' {\it Stmt} \verb'}'
 \subsection{\texttt{if}}
 
 
-Syntax: 1) \verb"if" \verb"(" {\it Exp} \verb")" {\it Stmt} \verb"else" {\it Stmt}\quad 2) \verb"if" \verb"(" {\it Exp} \verb")" {\it Stmt} 
+Syntax: 1) \verb"if" \verb"(" {\it Exp} \verb")" {\it Stmt} \verb"else" {\it Stmt}\quad 2) \verb"if" \verb"(" {\it Exp} \verb")" {\it Stmt}
 
 
 \subsection{\texttt{while}}
 
-Syntax: \verb'while (' {\it Exp} \verb')' {\it Stmt} 
+Syntax: \verb'while (' {\it Exp} \verb')' {\it Stmt}
 
 
 \subsection{\texttt{for}}
@@ -796,7 +796,7 @@ Syntax: 1) \verb"forall" {\it Id} \verb"in" {\it Exp}  {\it Stmt} \quad 2) \verb
 
 Examples:
 \begin{verbatim}
-  for (i= 2; i <= x / 2; ++i) 
+  for (i= 2; i <= x / 2; ++i)
     if (x % i == 0) return false;
 
   forall y in { 1 .. 6 }
@@ -813,7 +813,7 @@ Syntax: {\it Stmt}~{\it Stmt}
 
 \subsection{\texttt{choose}}
 
-Syntax:  \verb"choose" {\it Id} \verb"in" {\it Exp} \verb";"  \quad 2) \verb"choose" Id \verb"in" {\it Exp} \verb"s.t." {\it Exp} \verb";"    
+Syntax:  \verb"choose" {\it Id} \verb"in" {\it Exp} \verb";"  \quad 2) \verb"choose" Id \verb"in" {\it Exp} \verb"s.t." {\it Exp} \verb";"
 
 Example 1:
 \begin{center}
@@ -877,7 +877,7 @@ choose x8 in { 1 .. 5 } s.t. x8 > 6;
 &
 \begin{minipage}{.45\textwidth}
 \begin{verbatim}
-Error at line 14: Choose can't find any 
+Error at line 14: Choose can't find any
 suitable value.
 \end{verbatim}
 \end{minipage}
@@ -886,8 +886,6 @@ suitable value.
 
 
 \subsection{\texttt{success}}
-
-\textcolor{red}{TO BE REVISED. For now replace \texttt{success;} with \texttt{print("success");}}
 
 Syntax: \verb"success" \verb";"
 
@@ -904,13 +902,13 @@ odd(x) {
 }
 
 choose x in { 1 .. 8 };
-if (odd(x)) print("success");
+if (odd(x)) success;
 \end{verbatim}
 \end{minipage}
 &
 \begin{minipage}{.45\textwidth}
 \begin{verbatim}
-> alki -a success.alk 
+> alki -a success.alk
 success
 x |-> 5
 \end{verbatim}
@@ -919,8 +917,6 @@ x |-> 5
 \end{center}
 
 \subsection{\texttt{failure}}
-
-\textcolor{red}{TO BE REVISED. For now replace \texttt{failure;} with \texttt{print("failure");}}
 
 Syntax: \verb"failure" \verb";"
 
@@ -937,8 +933,8 @@ odd(x) {
 }
 
 choose x in { 1 .. 8 };
-if (odd(x)) print("success");
-else print("failure");
+if (odd(x)) success;
+else failure;
 \end{verbatim}
 \end{minipage}
 &
