--- a/doc/alk.tex
+++ b/doc/alk.tex
@@ -514,10 +514,10 @@ print(c); // {1, 3, 5}
 t = 2 in b ^ c;
 print(t); // false
 x = 0;
-forall y in s2 x = x + y;
+foreach y in s2 x = x + y;
 print(x); // 19
 d = emptySet;
-forall y in { 1 .. 6 }
+foreach y in { 1 .. 6 }
   if (y in s2) d = d U singletonSet(y);
 print(d); // {7}
 \end{verbatim}
@@ -792,14 +792,14 @@ Syntax: \verb'while (' {\it Exp} \verb')' {\it Stmt}
 
 \subsection{\texttt{for}}
 
-Syntax: 1) \verb"forall" {\it Id} \verb"in" {\it Exp}  {\it Stmt} \quad 2) \verb"for" \verb"(" {\it VarAssign} \verb";" {\it Exp} \verb";" {\it VarUpdate} \verb")" {\it Stmt}
+Syntax: 1) \verb"foreach" {\it Id} \verb"in" {\it Exp}  {\it Stmt} \quad 2) \verb"for" \verb"(" {\it VarAssign} \verb";" {\it Exp} \verb";" {\it VarUpdate} \verb")" {\it Stmt}
 
 Examples:
 \begin{verbatim}
   for (i= 2; i <= x / 2; ++i)
     if (x % i == 0) return false;
 
-  forall y in { 1 .. 6 }
+  foreach y in { 1 .. 6 }
     if (y in s2) d = d U singletonSet(y);
 \end{verbatim}
 
